# PixLab

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  package-lock.json  package.json  supabase-storage-setup.sql  vercel.json
.husky/: pre-commit
rust-wasm/: Cargo.toml  build.sh
rust-wasm/.cargo/: config.toml
rust-wasm/pkg/: package.json  pixlab_wasm.d.ts  pixlab_wasm.js  pixlab_wasm_bg.wasm  pixlab_wasm_bg.wasm.d.ts
rust-wasm/src/: lib.rs
rust-wasm/src/filters/: blur.rs  brightness.rs  crop.rs  flip.rs  grayscale.rs  mod.rs  rotate.rs
wasmcloud-services/: README.md
wasmcloud-services/image-metadata/image-metadata/: Cargo.toml  README.md
wasmcloud-services/image-metadata/image-metadata/src/: lib.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx
web/src/components/: CollaborativeCursors.tsx  CollaborativeCursorsCanvas.tsx  CropOverlay.tsx  ExportModal.tsx  FilterControls.tsx  ImageCanvas.tsx  ImageUploader.tsx
web/src/hooks/: useCollaboration.ts
web/src/lib/: cache.ts  imageMetadata.ts  storage.ts  supabase.ts
web/src/types/: collaboration.ts  filters.ts
web/src/utils/: exportImage.ts  logger.ts
web/src/wasm/: useWasm.ts
