[package]
name = "pixlab-wasm"
version = "0.1.0"
authors = ["PixLab Team"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd", "--enable-bulk-memory", "--enable-sign-ext", "--enable-nontrapping-float-to-int", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
photon-rs = "0.3"

# Web APIs
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
js-sys = "0.3"

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization at cost of compile time
panic = 'abort'         # Reduce binary size by removing panic unwinding
strip = true            # Strip debug symbols

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
